--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <p class="subtitle">UNIVERSAL KNOWLEDGE ENGINE</p>
         </header>
         <div class="controls">
-            <button id="addNode" class="btn-primary">+ NODE</button>
-            <button id="toggleLink" class="btn-secondary">🔗 CONNECT</button>
+            <button id="addNode">+ NODE</button>
+            <button id="toggleLink">🔗 CONNECT</button>
         </div>
         <div id="status-bar"></div>
     </div>
