--- a/index.html
+++ b/index.html
@@ -1,75 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scientia | Knowledge Engine</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="//unpkg.com/force-graph"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-</head>
-<body>
-    <div id="graph"></div>
+<div id="graph"></div>
 
-    <div id="ui-layer">
-        <header>
-            <h1>SCIENTIA</h1>
-            <div class="workspace-tabs">
-                <button class="tab-btn active" data-ws="Personal">My Vault</button>
-                <button class="tab-btn" data-ws="Shared">Shared Space</button>
-            </div>
-        </header>
-
-        <div class="controls">
-            <button id="addNode">+ NODE</button>
-            <button id="toggleLink">🔗 CONNECT</button>
+<div id="ui-layer">
+    <header>
+        <h1>SCIENTIA</h1>
+        <div class="workspace-tabs">
+            <button class="tab-btn active" data-ws="Personal">My Vault</button>
+            <button class="tab-btn" data-ws="Shared">Shared Space</button>
         </div>
-
-        <div class="search-container">
-            <input type="text" id="node-search" placeholder="Search nodes...">
-            <div id="search-results" class="hidden"></div>
-        </div>
+    </header>
+    <div class="controls">
+        <button id="addNode">+ NODE</button>
+        <button id="toggleLink">🔗 CONNECT</button>
     </div>
+</div>
 
-    <div id="auth-overlay" class="hidden">
-        <div class="auth-box">
-            <h2>SCIENTIA</h2>
-            <p>Enter your private vault</p>
-            <input type="email" id="email" placeholder="Email">
-            <input type="password" id="password" placeholder="Password">
-            <div class="auth-buttons">
-                <button id="login-btn">Sign In</button>
-                <button id="signup-btn" class="btn-secondary">Sign Up</button>
-            </div>
-            <p id="auth-error"></p>
-        </div>
+<div id="sidebar" class="sidebar-hidden">
+    <div style="display:flex; justify-content: space-between; align-items: center;">
+        <h2 id="node-title" style="margin:0;">Topic</h2>
+        <button id="close-sidebar">✕</button>
     </div>
+    <select id="node-category" style="margin-top:20px;">
+        <option value="General">General</option>
+        <option value="CS">CS</option>
+        <option value="Math">Math</option>
+    </select>
+    <textarea id="node-content" placeholder="Type notes here..."></textarea>
+    <div id="save-status" style="font-size:0.7rem; color:gray; margin-top:10px;">Saved</div>
+    <button id="delete-node" style="margin-top:20px; background:rgba(239,68,68,0.2); color:#ef4444; border-color:rgba(239,68,68,0.2);">🗑 Delete</button>
+</div>
 
-    <div id="sidebar" class="sidebar-hidden">
-        <div class="sidebar-header">
-            <h2 id="node-title">Topic</h2>
-            <div class="sidebar-actions">
-                <button id="edit-toggle">👁 Preview</button>
-                <button id="close-sidebar">✕</button>
-            </div>
-        </div>
-        <div class="meta-row">
-            <label>Folder</label>
-            <select id="node-category">
-                <option value="General">General</option>
-                <option value="CS">CS</option>
-                <option value="Math">Math</option>
-                <option value="Personal">Personal</option>
-            </select>
-        </div>
-        <textarea id="node-content" placeholder="Markdown supported..."></textarea>
-        <div id="node-preview" class="hidden"></div>
-        <div class="sidebar-footer">
-            <span id="save-status">All changes saved</span>
-            <button id="delete-node" class="btn-danger">🗑 Delete Node</button>
-        </div>
+<div id="auth-overlay" class="hidden">
     </div>
-
-    <script type="module" src="main.js"></script>
-</body>
-</html>
